hphp/test/zend/good/ext/standard/tests/strings/bug39873.php.skipif
<?php
if (!setlocale(LC_ALL, "ita","it","Italian","it_IT","it_IT.ISO8859-1","it_IT.ISO_8859-1")) {
        die("skip locale needed for this test is not supported on this platform");
}
?>