hphp/test/zend/bad/ext/standard/tests/strings/fprintf_variation_008.php.skipif
<?php
$data_file = dirname(__FILE__) . '/fprintf_variation_008.phpt.txt';
if (!($fp = fopen($data_file, 'w'))) {
  die('skip File fprintf_variation_008.phpt.txt could not be created');
}
if (PHP_INT_SIZE != 4) die("skip this test is for 32bit platform only");
?>